# locallyai-audit-agent

./: .gitignore  README.md  agent.py  cli.py  pyproject.toml  requirements.txt  run.sh  tools.py  trace_viewer.py  tracing.py
.github/workflows/: ci.yml
eval/: compare.py  dataset.yaml  fixtures.py  judge.py  run.py
eval/runs/: 2026-05-21T192709Z.jsonl  2026-05-21T192709Z_summary.md  2026-05-25T233942Z.jsonl  2026-05-25T233942Z_summary.md  2026-05-26T130749Z.jsonl  2026-05-26T130749Z_summary.md  2026-05-26T131702Z.jsonl  2026-05-26T131702Z_summary.md  2026-05-26T132719Z.jsonl  2026-05-26T132719Z_summary.md
tests/: test_smoke.py
